trying fix #2 for jumping background on mobile

--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -5678,6 +5678,9 @@ footer.bg-dark a {
 /***********************
 WHERE MAGIC HAPPENS
 **********************/
+.background-image-holder {
+  transition: height 999999s;
+}
 #feedback-icon {
   background: url("../images/feedback.svg") 0 0 no-repeat;
   height: 100px;
