--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -1936,7 +1936,7 @@ WHERE MAGIC HAPPENS
 **********************/
 
 .background-image-holder{
-	height: 100vh;
+	transition: height 999999s;
 }
 
 #feedback-icon{
